# agentic-ai-platform

./: .gitignore  BACKEND_FEATURES.md  CLAUDE.md  ZERO_DOWNTIME_DEPLOYMENT.md  plan.md  readme.md  이력.md
.claude/: settings.local.json
docs/: DATA_ARCHITECTURE_DESIGN.md  IMPLEMENTATION_STRATEGY.md  MODULE_GUIDE.md  internal-ops-plan.md  스키마설명.md
infrastructure/docker/: docker-compose.base.yml
infrastructure/k8s/services/ecommerce/: deployment.yaml  hpa.yaml  istio-virtualservice.yaml  rollout.yaml  service.yaml
scripts/deployment/: zero_downtime_deploy.sh
scripts/indexing/: index_notion.py
services/ecommerce/config/: api.yaml
services/internal-ops/: README.md  pyproject.toml
services/internal-ops/api/routes/: __init__.py  chat.py
services/internal-ops/app/: streamlit_app.py
services/internal-ops/config/: api.yaml  domain.yaml  notion.yaml  rag.yaml  rate_limit.yaml  slack.yaml  tools.yaml
services/internal-ops/docker/: Dockerfile  docker-compose.yml
services/internal-ops/internal_ops_service/agents/: __init__.py  internal_ops_agent.py  knowledge_agent.py
services/internal-ops/internal_ops_service/api/: dependencies.py  main.py
services/internal-ops/internal_ops_service/api/middleware/: rate_limit_middleware.py
services/internal-ops/internal_ops_service/api/routes/: chat.py  knowledge.py  tasks.py
services/internal-ops/internal_ops_service/api/schemas/: knowledge.py  tasks.py
services/internal-ops/internal_ops_service/integrations/notion/: __init__.py  client.py  models.py  sync.py
services/internal-ops/internal_ops_service/integrations/slack/: __init__.py  client.py  models.py  sync.py
services/internal-ops/internal_ops_service/tools/: __init__.py  enhanced_search.py  notion_page_tool.py  notion_search_tool.py  slack_search_tool.py  task_creation_tool.py
services/internal-ops/nginx/: internal-ops.conf
services/internal-ops/scripts/: evaluate_rag.py  index_notion.py  index_slack.py
services/internal-ops/src/internal_ops_service/: __init__.py
services/internal-ops/src/internal_ops_service/agents/: __init__.py  knowledge_agent.py
services/sample/: README.md  pyproject.toml
services/sample/api/: main.py
services/sample/api/middleware/: rate_limit_middleware.py
services/sample/config/: api.yaml  domain.yaml  websocket.yaml
services/sample/docker/: Dockerfile  docker-compose.yml
services/sample/nginx/: sample.conf
services/sample/sample_service/: __init__.py
services/sample/sample_service/agents/: __init__.py  sample_agent.py
services/sample/sample_service/api/: main.py
services/sample/sample_service/api/routes/: chat.py  health.py  websocket.py
services/sample/sample_service/tools/: __init__.py  sample_tool.py
