[tool.poetry]
name = "sample-service"
version = "0.1.0"
description = "Sample domain service - copy this to create new services"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "sample_service"}]

[tool.poetry.dependencies]
python = "^3.11"

# 필수 패키지
agentic-core = {path = "../../packages/core", develop = true}
agentic-pipeline = {path = "../../packages/pipeline", develop = true}
agentic-agents = {path = "../../packages/agents", develop = true}

# 선택적 패키지 - 필요시 주석 해제
# agentic-knowledge = {path = "../../packages/knowledge", develop = true}  # 지식그래프
# agentic-decision = {path = "../../packages/decision", develop = true}    # 의사결정 지원
# agentic-serving = {path = "../../packages/serving", develop = true}      # 로컬 모델 서빙
fastapi = "^0.100"
uvicorn = "^0.23"
pydantic = "^2.0"
pydantic-settings = "^2.0"
httpx = "^0.25"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
